# centaur

./: .gitignore  AGENTS.md  Dockerfile  Justfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  index.yaml  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml  console-ci.yml  deploy.yml  no-depot-guard.yml  publish-images.yml
apps/slackbot/: package.json  pnpm-lock.yaml
apps/usage/: README.md  app.js  data.json  index.html  style.css
apps/venue-scout/: server.js
centaur_sdk/backends/: stub.py
contrib/chart/: Chart.yaml  values.schema.json  values.yaml
docs/: vocs.config.ts
docs/pages/: _root.css
docs/scripts/: build-og.ts
e2e/: README.md
e2e/deploy/: create-ci-secrets.sh  run-kind.sh
e2e/scenarios/: slackbot-steering-stop.e2e.test.ts
migrations/: env.py
migrations/versions/: 001_initial_schema.py  004_api_keys.py
monitoring/: nginx.conf  prometheus.yml  promtail.yml
plugins/agent/: Dockerfile  client.py  entrypoint.sh
plugins/demo/: client.py
sandbox/: Dockerfile  SYSTEM_PROMPT.md  harness_session.py  slack-upload.sh
scripts/: build_self_improve_notifier_input.py  dbmate  generate-embeddings.py  migrate-from-sqlite.py  rename-vault-items.py  seed_mock_data.py  watchdog.sh
services/api/: Dockerfile  pyproject.toml
services/auth/: Dockerfile  main.py
services/firewall/: addon.py
services/nginx/: entrypoint.sh
services/sandbox/: Dockerfile  SYSTEM_PROMPT.md  call.sh  entrypoint.sh  install_tool_shims.py  slack-upload.sh  test_install_tool_shims.py
services/slackbot/: Dockerfile  package.json
services/web/: Dockerfile
services/workflow-python/: workflow_host.py
skills/paradigm-memory/: .env.example  SKILL.md
src/ai_v2/: app.py  cli.py  config.py  db.py  deps.py  embeddings.py  mcp_server.py  pipeline.py
src/api/: agent.py  api_keys.py  app.py  deps.py  pipe_agent.py  warm_pool.py
src/secret_manager/: app.py  (+3 more)
tests/: test_firewall_addon.py  test_harness_session.py
tools-paradigm/alphasense/: pyproject.toml
tools-paradigm/coinbase/: pyproject.toml
tools-paradigm/falconx/: pyproject.toml
tools/infra/chart/: client.py  pyproject.toml
workflows/: paradigm_pulse_daily.py  policy_news_monitor.py  slack_sync.py  weekly_usage_report.py
(+219 files in other folders)
