[project]
name = "alphasense"
description = "AlphaSense CLI for market intelligence and document search"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ai-v2]
module = "client.py"
hosts = ["api.alpha-sense.com"]
secrets = ["ALPHASENSE_API_KEY", "ALPHASENSE_CLIENT_ID", "ALPHASENSE_CLIENT_SECRET", "ALPHASENSE_USERNAME", "ALPHASENSE_PASSWORD"]
