[project]
name = "falconx"
description = "FalconX trading API — quotes, execution, balances, trade history"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
falconx = "falconx.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ai-v2]
module = "client.py"
hosts = ["api.falconx.io"]
secrets = ["FALCONX_P1_API_KEY", "FALCONX_P1_PASSPHRASE", "FALCONX_P1_SECRET_KEY", "FALCONX_PF_API_KEY", "FALCONX_PF_PASSPHRASE", "FALCONX_PF_SECRET_KEY"]
