[project]
name = "chart"
description = "Chart generation for crypto market data — line, candlestick/OHLC, comparison, and bar charts. Returns base64 PNG images ready for Slack upload."
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.7.0",
]

[tool.ai-v2]
module = "client.py"
